@@ -1,7 +1,7 @@
 #  File src/library/base/R/utilities.R
 #  Part of the R package, https://www.R-project.org
 #
-#  Copyright (C) 1995-2012 The R Core Team
+#  Copyright (C) 1995-2019 The R Core Team
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -22,4 +22,8 @@ mat.or.vec <- function(nr,nc)
 ## Use  'version' since that exists in all S dialects :
 is.R <-
     function() exists("version") && !is.null(vl <- version$language) && vl == "R"
+
+## deparse(.) returning *one* string
+deparse1 <- function(expr, collapse = " ", width.cutoff = 500L, ...)
+    paste(deparse(expr, width.cutoff, ...), collapse=collapse)
 
